# ChangeLog for dev-libs/libpcre
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.232 2014/04/29 19:28:59 vapier Exp $

  29 Apr 2014; Mike Frysinger <vapier@gentoo.org> libpcre-8.12.ebuild,
  libpcre-8.13-r1.ebuild, libpcre-8.13.ebuild, libpcre-8.20.ebuild,
  libpcre-8.21.ebuild, libpcre-8.30-r2.ebuild, libpcre-8.31.ebuild,
  libpcre-8.32-r1.ebuild, libpcre-8.32.ebuild, libpcre-8.33-r1.ebuild,
  libpcre-8.33.ebuild, libpcre-8.34.ebuild, libpcre-8.35.ebuild:
  Drop mint-specific -D_GNU_SOURCE as it is no longer needed #256824 by Alan
  Hourihane.

  28 Apr 2014; Michał Górny <mgorny@gentoo.org> libpcre-8.34.ebuild,
  libpcre-8.35.ebuild:
  Replace multilib_build_binaries with multilib_is_native_abi. The two are
  equivalent now, and the team has decided to use the old name as being less
  confusing.

  21 Apr 2014; Michał Górny <mgorny@gentoo.org> libpcre-8.35.ebuild:
  Use multilib_build_binaries consistently, and the new multilib_native_use*
  functions.

*libpcre-8.35 (05 Apr 2014)

  05 Apr 2014; Tim Harder <radhermit@gentoo.org> +libpcre-8.35.ebuild:
  Version bump.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> libpcre-8.33-r1.ebuild,
  libpcre-8.33.ebuild, libpcre-8.34.ebuild:
  Add arm64 love.

  06 Jan 2014; Mike Frysinger <vapier@gentoo.org> libpcre-8.34.ebuild:
  Use multilib_build_binaries helper #489580 by Thomas Sachau.

*libpcre-8.34 (16 Dec 2013)

  16 Dec 2013; Tim Harder <radhermit@gentoo.org> +libpcre-8.34.ebuild:
  Version bump.

  30 Nov 2013; Markos Chandras <hwoarang@gentoo.org> libpcre-8.33-r1.ebuild:
  Use V=1 for verbose build log. Bug #475994

*libpcre-8.33-r1 (26 Oct 2013)

  26 Oct 2013; Alexis Ballier <aballier@gentoo.org> +libpcre-8.33-r1.ebuild:
  Convert to multilib, bug #481300

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libpcre-8.33.ebuild:
  Stable for s390, wrt bug #453948
