@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libpcre
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.232 2014/04/29 19:28:59 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.233 2014/05/22 07:15:18 mgorny Exp $
+
+  22 May 2014; Michał Górny <mgorny@gentoo.org> libpcre-8.35.ebuild:
+  Add pcre-config to MULTILIB_CHOST_TOOLS.
 
   29 Apr 2014; Mike Frysinger <vapier@gentoo.org> libpcre-8.12.ebuild,
   libpcre-8.13-r1.ebuild, libpcre-8.13.ebuild, libpcre-8.20.ebuild,
